pynestml/generated/PyNestMLParser.java
// Generated from PyNestMLParser.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PyNestMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SL_COMMENT=1, ML_COMMENT=2, NEWLINE=3, WS=4, LINE_ESCAPE=5, END_KEYWORD=6, 
		INTEGER_KEYWORD=7, REAL_KEYWORD=8, STRING_KEYWORD=9, BOOLEAN_KEYWORD=10, 
		VOID_KEYWORD=11, FUNCTION_KEYWORD=12, RETURN_KEYWORD=13, IF_KEYWORD=14, 
		ELIF_KEYWORD=15, ELSE_KEYWORD=16, FOR_KEYWORD=17, WHILE_KEYWORD=18, IN_KEYWORD=19, 
		STEP_KEYWORD=20, INF_KEYWORD=21, AND_KEYWORD=22, OR_KEYWORD=23, NOT_KEYWORD=24, 
		RECORDABLE_KEYWORD=25, SHAPE_KEYWORD=26, NEURON_KEYWORD=27, SYNAPSE_KEYWORD=28, 
		STATE_KEYWORD=29, PARAMETERS_KEYWORD=30, INTERNALS_KEYWORD=31, INITIAL_VALUES_KEYWORD=32, 
		UPDATE_KEYWORD=33, EQUATIONS_KEYWORD=34, INPUT_KEYWORD=35, OUTPUT_KEYWORD=36, 
		CURRENT_KEYWORD=37, SPIKE_KEYWORD=38, INHIBITORY_KEYWORD=39, EXCITATORY_KEYWORD=40, 
		MAGIC_KEYWORD_HOMOGENEOUS=41, MAGIC_KEYWORD_HETEROGENEOUS=42, MAGIC_KEYWORD_WEIGHT=43, 
		MAGIC_KEYWORD_DELAY=44, ELLIPSIS=45, LEFT_PAREN=46, RIGHT_PAREN=47, PLUS=48, 
		TILDE=49, PIPE=50, CARET=51, AMPERSAND=52, LEFT_SQUARE_BRACKET=53, LEFT_ANGLE_MINUS=54, 
		RIGHT_SQUARE_BRACKET=55, LEFT_LEFT_SQUARE=56, RIGHT_RIGHT_SQUARE=57, LEFT_LEFT_ANGLE=58, 
		RIGHT_RIGHT_ANGLE=59, LEFT_ANGLE=60, RIGHT_ANGLE=61, LEFT_ANGLE_EQUALS=62, 
		PLUS_EQUALS=63, MINUS_EQUALS=64, STAR_EQUALS=65, FORWARD_SLASH_EQUALS=66, 
		EQUALS_EQUALS=67, EXCLAMATION_EQUALS=68, LEFT_ANGLE_RIGHT_ANGLE=69, RIGHT_ANGLE_EQUALS=70, 
		COMMA=71, MINUS=72, EQUALS=73, STAR=74, STAR_STAR=75, FORWARD_SLASH=76, 
		PERCENT=77, QUESTION=78, COLON=79, SEMICOLON=80, BOOLEAN_LITERAL=81, STRING_LITERAL=82, 
		NAME=83, INTEGER=84, DIFFERENTIAL_ORDER=85, FLOAT=86;
	public static final int
		RULE_dataType = 0, RULE_unitType = 1, RULE_expression = 2, RULE_simpleExpression = 3, 
		RULE_unaryOperator = 4, RULE_bitOperator = 5, RULE_comparisonOperator = 6, 
		RULE_logicalOperator = 7, RULE_variable = 8, RULE_functionCall = 9, RULE_odeFunction = 10, 
		RULE_odeEquation = 11, RULE_odeShape = 12, RULE_block = 13, RULE_stmt = 14, 
		RULE_compoundStmt = 15, RULE_smallStmt = 16, RULE_assignment = 17, RULE_declaration = 18, 
		RULE_anyMagicKeyword = 19, RULE_returnStmt = 20, RULE_ifStmt = 21, RULE_ifClause = 22, 
		RULE_elifClause = 23, RULE_elseClause = 24, RULE_forStmt = 25, RULE_whileStmt = 26, 
		RULE_nestMLCompilationUnit = 27, RULE_neuron = 28, RULE_body = 29, RULE_synapse = 30, 
		RULE_synapseBody = 31, RULE_blockWithVariables = 32, RULE_updateBlock = 33, 
		RULE_equationsBlock = 34, RULE_inputBlock = 35, RULE_inputLine = 36, RULE_inputType = 37, 
		RULE_outputBlock = 38, RULE_function = 39, RULE_parameter = 40;
	public static final String[] ruleNames = {
		"dataType", "unitType", "expression", "simpleExpression", "unaryOperator", 
		"bitOperator", "comparisonOperator", "logicalOperator", "variable", "functionCall", 
		"odeFunction", "odeEquation", "odeShape", "block", "stmt", "compoundStmt", 
		"smallStmt", "assignment", "declaration", "anyMagicKeyword", "returnStmt", 
		"ifStmt", "ifClause", "elifClause", "elseClause", "forStmt", "whileStmt", 
		"nestMLCompilationUnit", "neuron", "body", "synapse", "synapseBody", "blockWithVariables", 
		"updateBlock", "equationsBlock", "inputBlock", "inputLine", "inputType", 
		"outputBlock", "function", "parameter"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, "'end'", "'integer'", "'real'", "'string'", 
		"'boolean'", "'void'", "'function'", "'return'", "'if'", "'elif'", "'else'", 
		"'for'", "'while'", "'in'", "'step'", "'inf'", "'and'", "'or'", "'not'", 
		"'recordable'", "'shape'", "'neuron'", "'synapse'", "'state'", "'parameters'", 
		"'internals'", "'initial_values'", "'update'", "'equations'", "'input'", 
		"'output'", "'current'", "'spike'", "'inhibitory'", "'excitatory'", "'@homogeneous'", 
		"'@heterogeneous'", "'@weight'", "'@delay'", "'...'", "'('", "')'", "'+'", 
		"'~'", "'|'", "'^'", "'&'", "'['", "'<-'", "']'", "'[['", "']]'", "'<<'", 
		"'>>'", "'<'", "'>'", "'<='", "'+='", "'-='", "'*='", "'/='", "'=='", 
		"'!='", "'<>'", "'>='", "','", "'-'", "'='", "'*'", "'**'", "'/'", "'%'", 
		"'?'", "':'", "';'", null, null, null, null, "'''"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "SL_COMMENT", "ML_COMMENT", "NEWLINE", "WS", "LINE_ESCAPE", "END_KEYWORD", 
		"INTEGER_KEYWORD", "REAL_KEYWORD", "STRING_KEYWORD", "BOOLEAN_KEYWORD", 
		"VOID_KEYWORD", "FUNCTION_KEYWORD", "RETURN_KEYWORD", "IF_KEYWORD", "ELIF_KEYWORD", 
		"ELSE_KEYWORD", "FOR_KEYWORD", "WHILE_KEYWORD", "IN_KEYWORD", "STEP_KEYWORD", 
		"INF_KEYWORD", "AND_KEYWORD", "OR_KEYWORD", "NOT_KEYWORD", "RECORDABLE_KEYWORD", 
		"SHAPE_KEYWORD", "NEURON_KEYWORD", "SYNAPSE_KEYWORD", "STATE_KEYWORD", 
		"PARAMETERS_KEYWORD", "INTERNALS_KEYWORD", "INITIAL_VALUES_KEYWORD", "UPDATE_KEYWORD", 
		"EQUATIONS_KEYWORD", "INPUT_KEYWORD", "OUTPUT_KEYWORD", "CURRENT_KEYWORD", 
		"SPIKE_KEYWORD", "INHIBITORY_KEYWORD", "EXCITATORY_KEYWORD", "MAGIC_KEYWORD_HOMOGENEOUS", 
		"MAGIC_KEYWORD_HETEROGENEOUS", "MAGIC_KEYWORD_WEIGHT", "MAGIC_KEYWORD_DELAY", 
		"ELLIPSIS", "LEFT_PAREN", "RIGHT_PAREN", "PLUS", "TILDE", "PIPE", "CARET", 
		"AMPERSAND", "LEFT_SQUARE_BRACKET", "LEFT_ANGLE_MINUS", "RIGHT_SQUARE_BRACKET", 
		"LEFT_LEFT_SQUARE", "RIGHT_RIGHT_SQUARE", "LEFT_LEFT_ANGLE", "RIGHT_RIGHT_ANGLE", 
		"LEFT_ANGLE", "RIGHT_ANGLE", "LEFT_ANGLE_EQUALS", "PLUS_EQUALS", "MINUS_EQUALS", 
		"STAR_EQUALS", "FORWARD_SLASH_EQUALS", "EQUALS_EQUALS", "EXCLAMATION_EQUALS", 
		"LEFT_ANGLE_RIGHT_ANGLE", "RIGHT_ANGLE_EQUALS", "COMMA", "MINUS", "EQUALS", 
		"STAR", "STAR_STAR", "FORWARD_SLASH", "PERCENT", "QUESTION", "COLON", 
		"SEMICOLON", "BOOLEAN_LITERAL", "STRING_LITERAL", "NAME", "INTEGER", "DIFFERENTIAL_ORDER", 
		"FLOAT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PyNestMLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PyNestMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DataTypeContext extends ParserRuleContext {
		public Token isInt;
		public Token isReal;
		public Token isString;
		public Token isBool;
		public Token isVoid;
		public UnitTypeContext unit;
		public TerminalNode INTEGER_KEYWORD() { return getToken(PyNestMLParser.INTEGER_KEYWORD, 0); }
		public TerminalNode REAL_KEYWORD() { return getToken(PyNestMLParser.REAL_KEYWORD, 0); }
		public TerminalNode STRING_KEYWORD() { return getToken(PyNestMLParser.STRING_KEYWORD, 0); }
		public TerminalNode BOOLEAN_KEYWORD() { return getToken(PyNestMLParser.BOOLEAN_KEYWORD, 0); }
		public TerminalNode VOID_KEYWORD() { return getToken(PyNestMLParser.VOID_KEYWORD, 0); }
		public UnitTypeContext unitType() {
			return getRuleContext(UnitTypeContext.class,0);
		}
		public DataTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyNestMLParserVisitor ) return ((PyNestMLParserVisitor<? extends T>)visitor).visitDataType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataTypeContext dataType() throws RecognitionException {
		DataTypeContext _localctx = new DataTypeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_dataType);
		try {
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEGER_KEYWORD:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				((DataTypeContext)_localctx).isInt = match(INTEGER_KEYWORD);
				}
				break;
			case REAL_KEYWORD:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				((DataTypeContext)_localctx).isReal = match(REAL_KEYWORD);
				}
				break;
			case STRING_KEYWORD:
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				((DataTypeContext)_localctx).isString = match(STRING_KEYWORD);
				}
				break;
			case BOOLEAN_KEYWORD:
				enterOuterAlt(_localctx, 4);
				{
				setState(85);
				((DataTypeContext)_localctx).isBool = match(BOOLEAN_KEYWORD);
				}
				break;
			case VOID_KEYWORD:
				enterOuterAlt(_localctx, 5);
				{
				setState(86);
				((DataTypeContext)_localctx).isVoid = match(VOID_KEYWORD);
				}
				break;
			case LEFT_PAREN:
			case NAME:
			case INTEGER:
				enterOuterAlt(_localctx, 6);
				{
				setState(87);
				((DataTypeContext)_localctx).unit = unitType(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnitTypeContext extends ParserRuleContext {
		public UnitTypeContext base;
		public UnitTypeContext left;
		public Token leftParentheses;
		public UnitTypeContext compoundUnit;
		public Token rightParentheses;
		public Token unitlessLiteral;
		public Token divOp;
		public UnitTypeContext right;
		public Token unit;
		public Token timesOp;
		public Token powOp;
		public Token exponent;
		public TerminalNode LEFT_PAREN() { return getToken(PyNestMLParser.LEFT_PAREN, 0); }
		public List<UnitTypeContext> unitType() {
			return getRuleContexts(UnitTypeContext.class);
		}
		public UnitTypeContext unitType(int i) {
			return getRuleContext(UnitTypeContext.class,i);
		}
		public TerminalNode RIGHT_PAREN() { return getToken(PyNestMLParser.RIGHT_PAREN, 0); }
		public TerminalNode INTEGER() { return getToken(PyNestMLParser.INTEGER, 0); }
		public TerminalNode FORWARD_SLASH() { return getToken(PyNestMLParser.FORWARD_SLASH, 0); }
		public TerminalNode NAME() { return getToken(PyNestMLParser.NAME, 0); }
		public TerminalNode STAR() { return getToken(PyNestMLParser.STAR, 0); }
		public TerminalNode STAR_STAR() { return getToken(PyNestMLParser.STAR_STAR, 0); }
		public UnitTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unitType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyNestMLParserVisitor ) return ((PyNestMLParserVisitor<? extends T>)visitor).visitUnitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnitTypeContext unitType() throws RecognitionException {
		return unitType(0);
	}

	private UnitTypeContext unitType(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		UnitTypeContext _localctx = new UnitTypeContext(_ctx, _parentState);
		UnitTypeContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_unitType, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LEFT_PAREN:
				{
				setState(91);
				((UnitTypeContext)_localctx).leftParentheses = match(LEFT_PAREN);
				setState(92);
				((UnitTypeContext)_localctx).compoundUnit = unitType(0);
				setState(93);
				((UnitTypeContext)_localctx).rightParentheses = match(RIGHT_PAREN);
				}
				break;
			case INTEGER:
				{
				setState(95);
				((UnitTypeContext)_localctx).unitlessLiteral = match(INTEGER);
				setState(96);
				((UnitTypeContext)_localctx).divOp = match(FORWARD_SLASH);
				setState(97);
				((UnitTypeContext)_localctx).right = unitType(2);
				}
				break;
			case NAME:
				{
				setState(98);
				((UnitTypeContext)_localctx).unit = match(NAME);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(112);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(110);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new UnitTypeContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_unitType);
						setState(101);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(104);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case STAR:
							{
							setState(102);
							((UnitTypeContext)_localctx).timesOp = match(STAR);
							}
							break;
						case FORWARD_SLASH:
							{
							setState(103);
							((UnitTypeContext)_localctx).divOp = match(FORWARD_SLASH);
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(106);
						((UnitTypeContext)_localctx).right = unitType(4);
						}
						break;
					case 2:
						{
						_localctx = new UnitTypeContext(_parentctx, _parentState);
						_localctx.base = _prevctx;
						_localctx.base = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_unitType);
						setState(107);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(108);
						((UnitTypeContext)_localctx).powOp = match(STAR_STAR);
						setState(109);
						((UnitTypeContext)_localctx).exponent = match(INTEGER);
						}
						break;
					}
					} 
				}
				setState(114);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
